fix bug and change layout
change book cover layout to match format from kanazawa university

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -30,9 +30,16 @@ year     =     {2016}
 	year = {2012},
 }
 
-@article{bourdin_variational_nodate,
-	title = {The variational approach to fracture},
+@article{miyoshi_direction_2000,
+	title = {Direction and curvature of the cracks in two-dimensional elastic body},
+	volume = {17},
+	issn = {0916-7005, 1868-937X},
 	language = {en},
-	author = {Bourdin, Blaise and Francfort, Gilles A and Marigo, Jean-Jacques},
-	pages = {170},
+	number = {2},
+	urldate = {2020-12-02},
+	journal = {Japan Journal of Industrial and Applied Mathematics},
+	author = {Miyoshi, Tetsuhiko},
+	month = jun,
+	year = {2000},
+	pages = {295--307}
 }
