--- a/Full-N-studentID-surname-firstname.tex
+++ b/Full-N-studentID-surname-firstname.tex
@@ -1,4 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Masters/Doctoral Thesis 
 % LaTeX Template
 % Version 1.43 (17/5/14)
@@ -29,7 +28,7 @@
 \usepackage{CJKutf8}
 %Math Package and Symbol
 %commented package
-\graphicspath{{Pictures/}} % Specifies the directory where pictures are stored
+\graphicspath{{Figures/}} % Specifies the directory where pictures are stored
 \usepackage{color,subcaption,enumitem,hyperref}
 \usepackage{listings}
 \usepackage{./MissingPackages/freefemlistings}
@@ -71,47 +70,64 @@
 
 \begin{titlepage}
 \begin{center}
-
-\textsc{\LARGE \univname}\\[1cm] % University name
-%\textsc{\Large Master Thesis}\\[0.5cm] % Thesis type
+\LARGE
+%\textsc{\LARGE \univname}\\[1cm] % University name
+{Dissertation}\\[0.5cm] % Thesis type
 
 %\HRule \\[0.4cm] % Horizontal line
-{\huge \bfseries \ttitle \\
-	\huge 
+\vspace{3cm}
+
+{\bfseries \ttitle \\
 	% japanese title begin here
 	\begin{CJK}{UTF8}{min}
-		片持ち梁における亀裂進展に対する変分的アプローチ
+		\Large
+		\jtitle
 	\end{CJK}
 }\\[1cm] % Thesis title
 %\HRule \\[1.5cm] % Horizontal line
 
-\begin{minipage}{0.5\textwidth}
-\begin{flushleft} \Large
-\emph{by:}\\
-%\href{http://www.johnsmith.com}
-{\authornames} % Author name - remove the \href bracket to remove the link
-\end{flushleft}
-\end{minipage}
-\begin{minipage}{0.4\textwidth}
-\begin{flushright} \Large
-\emph{Supervisor:} \\
-%\href{http://www.jamessmith.com}
-{\supname} % Supervisor name - remove the \href bracket to remove the link  
-\end{flushright}
-\end{minipage}\\[2.0cm]
+%\begin{figure}[htbp]
+%	\centering
+%	\includegraphics[width=0.35\linewidth]{kulogo}
+%\end{figure}
 
-\begin{figure}[htbp]
-	\centering
-	\includegraphics[width=0.35\linewidth]{Figures/kulogo}
-\end{figure}
+\vspace{3cm}
+
+\begin{minipage}{.5\textwidth}
+	\begin{flushleft}
+		\groupname, \univname
+	\end{flushleft}
+\end{minipage}
+\begin{minipage}{.48\textwidth}
+	\begin{flushright}
+	\end{flushright}
+\end{minipage}
+
 \vspace{1.5cm}
 
-\Large \textit{A thesis submitted in fulfilment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
-\groupname\\\deptname\\[1cm] % Research group name and department name
- 
-{\Large September 2019}\\[2cm] % Date
+\begin{minipage}{.48\textwidth}
+	\begin{flushleft}
+	\end{flushleft}
+\end{minipage}
+\begin{minipage}{.5\textwidth}
+	\begin{flushright}
+		\deptname % only for KOU
+	\end{flushright}
+\end{minipage}
+
+\vspace{1.5cm}
+
+\begin{flushleft} \Large
+	%\href{http://www.johnsmith.com}
+	{\sid}\\ % student id only for KOU
+	{Name: \authornames} \\ % Author name - remove the \href bracket to remove the link
+	%\href{http://www.jamessmith.com}
+	{Chief advisor: \chiefname}\\ % only for KOU
+	{\today} % Date of submission
+\end{flushleft}
+
+%\Large \textit{A thesis submitted in fulfilment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
 %\includegraphics{Logo} % University/department logo - uncomment to place it
- 
 \vfill
 \end{center}
 
@@ -123,6 +139,7 @@
 \addtotoc{Abstract} % Add the "Abstract" page entry to the Contents
 
 \abstract{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
+Citation \cite[]{miyoshi_direction_2000}
 \it{keyword: }
 }
 
