--- a/MissingPackages/pythonhighlight.sty
+++ b/MissingPackages/pythonhighlight.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{pythonhighlight}[2011/09/19 python code highlighting; provided by Olivier Verdier <olivier.verdier@gmail.com>]
+\ProvidesPackage{./MissingPackages/pythonhighlight}[2011/09/19 python code highlighting; provided by Olivier Verdier <olivier.verdier@gmail.com>]
 
 
 \RequirePackage{listings}
