--- a/Thesis.cls
+++ b/Thesis.cls
@@ -26,18 +26,18 @@
 
 \NeedsTeXFormat{LaTeX2e}[1996/12/01]
 \ProvidesClass{Thesis}
-              [2007/22/02 v1.0
-   LaTeX document class]
+[2007/22/02 v1.0
+LaTeX document class]
 \def\baseclass{book}
 \DeclareOption*{\PassOptionsToClass{\CurrentOption}{\baseclass}}
 \def\@checkoptions#1#2{
-  \edef\@curroptions{\@ptionlist{\@currname.\@currext}}
-  \@tempswafalse
-  \@tfor\@this:=#2\do{
-    \@expandtwoargs\in@{,\@this,}{,\@curroptions,}
-    \ifin@ \@tempswatrue \@break@tfor \fi}
-  \let\@this\@empty
-  \if@tempswa \else \PassOptionsToClass{#1}{\baseclass}\fi
+	\edef\@curroptions{\@ptionlist{\@currname.\@currext}}
+	\@tempswafalse
+	\@tfor\@this:=#2\do{
+		\@expandtwoargs\in@{,\@this,}{,\@curroptions,}
+		\ifin@ \@tempswatrue \@break@tfor \fi}
+	\let\@this\@empty
+	\if@tempswa \else \PassOptionsToClass{#1}{\baseclass}\fi
 }
 \@checkoptions{11pt}{{10pt}{11pt}{12pt}}
 \PassOptionsToClass{a4paper}{\baseclass}
@@ -46,23 +46,23 @@
 \newcommand\bhrule{\typeout{------------------------------------------------------------------------------}}
 
 \newcommand\Declaration[1]{
-\btypeout{Declaration of Authorship}
-\addtotoc{Declaration of Authorship}
-\thispagestyle{plain}
-\null\vfil
-%\vskip 60\p@
-\begin{center}{\huge\bf Declaration of Authorship\par}\end{center}
-%\vskip 60\p@
-{\normalsize #1}
-\vfil\vfil\null
-%\cleardoublepage
+	\btypeout{Declaration of Authorship}
+	\addtotoc{Declaration of Authorship}
+	\thispagestyle{plain}
+	\null\vfil
+	%\vskip 60\p@
+	\begin{center}{\huge\bf Declaration of Authorship\par}\end{center}
+	%\vskip 60\p@
+	{\normalsize #1}
+	\vfil\vfil\null
+	%\cleardoublepage
 }
 
 \newcommand\btypeout[1]{\bhrule\typeout{\space #1}\bhrule}
 \def\today{\ifcase\month\or
-  January\or February\or March\or April\or May\or June\or
-  July\or August\or September\or October\or November\or December\fi
-  \space \number\year}
+	January\or February\or March\or April\or May\or June\or
+	July\or August\or September\or October\or November\or December\fi
+	\space \number\year}
 \usepackage{setspace}
 \onehalfspacing
 \setlength{\parindent}{0pt}
@@ -75,13 +75,13 @@
 %	MARGINS
 %----------------------------------------------------------------------------------------
 \setmarginsrb  { 1.5in}  % left margin
-                        { 0.6in}  % top margin
-                        { 1.0in}  % right margin
-                        { 0.8in}  % bottom margin
-                        {  20pt}  % head height
-                        {0.25in}  % head sep
-                        {   9pt}  % foot height
-                        { 0.3in}  % foot sep
+{ 0.6in}  % top margin
+{ 1.0in}  % right margin
+{ 0.8in}  % bottom margin
+{  20pt}  % head height
+{0.25in}  % head sep
+{   9pt}  % foot height
+{ 0.3in}  % foot sep
 %----------------------------------------------------------------------------------------
 \raggedbottom
 \setlength{\topskip}{1\topskip \@plus 5\p@}
@@ -99,10 +99,10 @@
 \renewcommand{\sectionmark}[1]{}
 \renewcommand{\subsectionmark}[1]{}
 \def\cleardoublepage{\clearpage\if@twoside \ifodd\c@page\else
-\hbox{}
-\thispagestyle{empty}
-\newpage
-\if@twocolumn\hbox{}\newpage\fi\fi\fi}
+	\hbox{}
+	\thispagestyle{empty}
+	\newpage
+	\if@twocolumn\hbox{}\newpage\fi\fi\fi}
 %math symbol and package
 \usepackage{amsmath,amsfonts,amssymb,amscd,amsthm,xspace}
 \newcommand{\R}{\mathbb{R}}
@@ -122,16 +122,6 @@
 	\let\div\relax
 	\DeclareMathOperator{\div}{div}
 }
-\iffalse
-\theoremstyle{remark}
-\newtheorem{remark}{Remark}[chapter]
-\newtheorem{prop}{Properties}
-\theoremstyle{theorem}
-\newtheorem{theorem}{Theorem}[chapter]
-\theoremstyle{proposition}
-\newtheorem{proposition}{Proposition}[chapter]
-\fi
-\theoremstyle{problem}
 \newtheorem{problem}{Problem}[chapter]
 \renewcommand\qedsymbol{$\blacksquare$}
 \theoremstyle{plain}
@@ -170,23 +160,23 @@
 \usepackage{listings}
 \usepackage{./MissingPackages/lstpatch}
 \lstset{captionpos=b,
-        frame=tb,
-        basicstyle=\scriptsize\ttfamily,
-        showstringspaces=false,
-        keepspaces=true}
+	frame=tb,
+	basicstyle=\scriptsize\ttfamily,
+	showstringspaces=false,
+	keepspaces=true}
 \lstdefinestyle{matlab} {
-        language=Matlab,
-        keywordstyle=\color{blue},
-        commentstyle=\color[rgb]{0.13,0.55,0.13}\em,
-        stringstyle=\color[rgb]{0.7,0,0} }
+	language=Matlab,
+	keywordstyle=\color{blue},
+	commentstyle=\color[rgb]{0.13,0.55,0.13}\em,
+	stringstyle=\color[rgb]{0.7,0,0} }
 \usepackage[pdfpagemode={UseOutlines},bookmarks=true,bookmarksopen=true,
-   bookmarksopenlevel=0,bookmarksnumbered=true,hypertexnames=false,
-   colorlinks,linkcolor={blue},citecolor={blue},urlcolor={red},
-   pdfstartview={FitV},unicode,breaklinks=true]{hyperref}
+bookmarksopenlevel=0,bookmarksnumbered=true,hypertexnames=false,
+colorlinks,linkcolor={blue},citecolor={blue},urlcolor={red},
+pdfstartview={FitV},unicode,breaklinks=true]{hyperref}
 \pdfstringdefDisableCommands{
-   \let\\\space
+	\let\\\space
 }
-\newcommand*{\supervisor}[1]{\def\supname{#1}}
+\newcommand*{\chiefadvisor}[1]{\def\chiefname{#1}}
 \newcommand*{\thesistitle}[1]{\def\ttitle{#1}}
 \newcommand*{\examiner}[1]{\def\examname{#1}}
 \newcommand*{\degree}[1]{\def\degreename{#1}}
@@ -202,6 +192,8 @@
 \newcommand*{\FACULTY}[1]{\def\FACNAME{#1}}
 \newcommand*{\subject}[1]{\def\subjectname{#1}}
 \newcommand*{\keywords}[1]{\def\keywordnames{#1}}
+\newcommand*{\studentid}[1]{\def\sid{#1}}
+\newcommand*{\jptitle}[1]{\def\jtitle{#1}}
 
 %----------------------------------------------------------------------------------------
 %	DOCUMENT VARIABLES
@@ -211,15 +203,19 @@
 %	defined as \examname above so you cite it as \examname
 %----------------------------------------------------------------------------------------
 
-\thesistitle{Variational approach to crack propagation in a cantilever beam} % Your thesis title - this is used in the title and abstract
+\thesistitle{Numerical study of the crack path selection problem based on the variational fracture theory} % Your thesis title - this is used in the title and abstract
 %-------------------------------------------------
-\supervisor{Professor Masato Kimura} % You supervisor's name - this is used in the title page
+\chiefadvisor{Professor Masato Kimura} % You supervisor's name - this is used in the title page
 %-------------------------------------------------
 \examiner{} % Your examiner's name - this is not currently used anywhere in the template, cite it with \examname if you want it
 %-------------------------------------------------
-\degree{Master of Science} % Your degree name - this is currently used in the title page and abstract
+\degree{Doctor of Science} % Your degree name - this is currently used in the title page and abstract
 %-------------------------------------------------
-\authors{Alifian Mahardhika Maulana \\ 1715011056} % Your name - this is used in the title page and abstract
+\authors{Alifian Mahardhika Maulana} % Your name - this is used in the title page and abstract
+%-------------------------------------------------
+\jptitle{変分型破壊理論に基づく亀裂経路選択問題の数値的研究} % Your thesis title in JP
+%-------------------------------------------------
+\studentid{1924012007} % Your student ID
 %-------------------------------------------------
 \addresses{} % Your address - this is not currently used anywhere in the template, cite it with \addressnames if you want it
 %-------------------------------------------------
@@ -228,242 +224,242 @@
 \keywords{} % Keywords for your thesis - this is not currently used anywhere in the template, cite it with \keywordnames if you want it
 %-------------------------------------------------
 \university{\texorpdfstring{\href{https://www.kanazawa-u.ac.jp/e/} % Your university's URL
-                {Kanazawa University}} % Your university's name - this is currently used in the title page
-                {Kanazawa University}}
+		{Kanazawa University}} % Your university's name - this is currently used in the title page
+	{Kanazawa University}}
 %-------------------------------------------------
 \UNIVERSITY{\texorpdfstring{\href{https://www.kanazawa-u.ac.jp/e/} % Your university's URL
-                {KANAZAWA UNIVERSITY}} % Your university's name in capitals - this is currently used in the abstract page
-                {KANAZAWA UNIVERSITY}}
+		{KANAZAWA UNIVERSITY}} % Your university's name in capitals - this is currently used in the abstract page
+	{KANAZAWA UNIVERSITY}}
 %-------------------------------------------------
 \department{\texorpdfstring{\href{https://www.nst.kanazawa-u.ac.jp/eng/academics/Math_Physical.html} % Your department's URL
-                {Division of Mathematical and Physical Sciences}} % Your department's name - used in the title page and abstract
-                {Division of Mathematical and Physical Sciences}}
+		{Division of Mathematical and Physical Sciences}} % Your department's name - used in the title page and abstract
+	{Division of Mathematical and Physical Sciences}}
 %-------------------------------------------------
 \DEPARTMENT{\texorpdfstring{\href{https://www.nst.kanazawa-u.ac.jp/eng/academics/Math_Physical.html} % Your department's URL
-                {DIVISION OF MATHEMATICAL AND PHYSICAL SCIENCES}} % Your department's name in capitals - this is not currently used anywhere in the template, cite it with \DEPTNAME if you want it
-                {DIVISION OF MATHEMATICAL AND PHYSICAL SCIENCES}}
+		{DIVISION OF MATHEMATICAL AND PHYSICAL SCIENCES}} % Your department's name in capitals - this is not currently used anywhere in the template, cite it with \DEPTNAME if you want it
+	{DIVISION OF MATHEMATICAL AND PHYSICAL SCIENCES}}
 
 %-------------------------------------------------
 \group{\texorpdfstring{\href{https://www.nst.kanazawa-u.ac.jp/eng/} % Your research group's URL
-                {Graduate School of Natural Sciences and Technology}} % Your research group's name - this is currently used in the title page
-                {Graduate School of Natural Sciences and Technology}}
+		{Graduate School of Natural Sciences and Technology}} % Your research group's name - this is currently used in the title page
+	{Graduate School of Natural Sciences and Technology}}
 %-------------------------------------------------
 \GROUP{\texorpdfstring{\href{https://www.nst.kanazawa-u.ac.jp/eng/} % Your research group's URL
-                {GRADUATE SCHOOL OF NATURAL SCIENCES AND TECHNOLOGY}} % Your research group's name in capitals - this is not currently used anywhere in the template, cite it with \GROUPNAME if you want it
-                {GRADUATE SCHOOL OF NATURAL SCIENCES AND TECHNOLOGY}}
+		{GRADUATE SCHOOL OF NATURAL SCIENCES AND TECHNOLOGY}} % Your research group's name in capitals - this is not currently used anywhere in the template, cite it with \GROUPNAME if you want it
+	{GRADUATE SCHOOL OF NATURAL SCIENCES AND TECHNOLOGY}}
 %-------------------------------------------------
 \faculty{\texorpdfstring{\href{https://www.nst.kanazawa-u.ac.jp/eng/} % Your faculty's URL
-                {Graduate School of Natural Sciences and Technology}} % Your faculty's name - this is currently used in the abstract page
-                {Graduate School of Natural Sciences and Technology}}
+		{Graduate School of Natural Sciences and Technology}} % Your faculty's name - this is currently used in the abstract page
+	{Graduate School of Natural Sciences and Technology}}
 %-------------------------------------------------
 \FACULTY{\texorpdfstring{\href{https://www.nst.kanazawa-u.ac.jp/eng/} % Your faculty's URL
-                {GRADUATE SCHOOL OF NATURAL SCIENCES AND TECHNOLOGY}} % Your faculty's name in capitals - this is not currently used anywhere in the template, cite it with \FACNAME if you want it
-                {GRADUATE SCHOOL OF NATURAL SCIENCES AND TECHNOLOGY}}
+		{GRADUATE SCHOOL OF NATURAL SCIENCES AND TECHNOLOGY}} % Your faculty's name in capitals - this is not currently used anywhere in the template, cite it with \FACNAME if you want it
+	{GRADUATE SCHOOL OF NATURAL SCIENCES AND TECHNOLOGY}}
 %----------------------------------------------------------------------------------------
 
 % The default title page, this is not used in this www.latextemplates.com version
 \renewcommand\maketitle{
-  \btypeout{Title Page}
-  \hypersetup{pdftitle={\@title}}
-  \hypersetup{pdfsubject=\subjectname}
-  \hypersetup{pdfauthor=\authornames}
-  \hypersetup{pdfkeywords=\keywordnames}
-  \thispagestyle{empty}
-  \begin{titlepage}
-    \let\footnotesize\small
-    \let\footnoterule\relax
-    \let \footnote \thanks
-    \setcounter{footnote}{0}
-    \null\vfil
-    \vskip 60\p@
-    \begin{center}
-      \setlength{\parskip}{0pt}
-      {\large\textbf{\UNIVNAME}\par}
-      \vfill
-      {\huge \bf \@title \par}
-      \vfill
-      {\LARGE by \par}
-      \smallskip
-      {\LARGE \authornames \par}
-      \vfill
-      {\large A thesis submitted in partial fulfillment for the \par}
-      {\large degree of \degreename \par}
-      \bigskip
-      \bigskip
-      {\large in the \par}
-      {\large \facname \par}
-      {\large \deptname \par}
-      \bigskip
-      \bigskip
-      \bigskip
-      {\Large \@date \par}
-      \bigskip
-    \end{center}
-    \par
-    \@thanks
-    \vfil\null
-  \end{titlepage}
-  \setcounter{footnote}{0}%
-  \global\let\thanks\relax
-  \global\let\maketitle\relax
-  \global\let\@thanks\@empty
-  \global\let\@author\@empty
-  \global\let\@date\@empty
-  \global\let\@title\@empty
-  \global\let\title\relax
-  \global\let\author\relax
-  \global\let\date\relax
-  \global\let\and\relax
-  \cleardoublepage
+	\btypeout{Title Page}
+	\hypersetup{pdftitle={\@title}}
+	\hypersetup{pdfsubject=\subjectname}
+	\hypersetup{pdfauthor=\authornames}
+	\hypersetup{pdfkeywords=\keywordnames}
+	\thispagestyle{empty}
+	\begin{titlepage}
+		\let\footnotesize\small
+		\let\footnoterule\relax
+		\let \footnote \thanks
+		\setcounter{footnote}{0}
+		\null\vfil
+		\vskip 60\p@
+		\begin{center}
+			\setlength{\parskip}{0pt}
+			{\large\textbf{\UNIVNAME}\par}
+			\vfill
+			{\huge \bf \@title \par}
+			\vfill
+			{\LARGE by \par}
+			\smallskip
+			{\LARGE \authornames \par}
+			\vfill
+			{\large A thesis submitted in partial fulfillment for the \par}
+			{\large degree of \degreename \par}
+			\bigskip
+			\bigskip
+			{\large in the \par}
+			{\large \facname \par}
+			{\large \deptname \par}
+			\bigskip
+			\bigskip
+			\bigskip
+			{\Large \@date \par}
+			\bigskip
+		\end{center}
+		\par
+		\@thanks
+		\vfil\null
+	\end{titlepage}
+	\setcounter{footnote}{0}%
+	\global\let\thanks\relax
+	\global\let\maketitle\relax
+	\global\let\@thanks\@empty
+	\global\let\@author\@empty
+	\global\let\@date\@empty
+	\global\let\@title\@empty
+	\global\let\title\relax
+	\global\let\author\relax
+	\global\let\date\relax
+	\global\let\and\relax
+	\cleardoublepage
 }
 %----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE DESIGN
 %----------------------------------------------------------------------------------------
 \newenvironment{abstract}
 {
-  \btypeout{Abstract Page}
-  \thispagestyle{empty}
-  \null\vfil
-  \begin{center}
-    \setlength{\parskip}{0pt}
-    {\normalsize \UNIVNAME \par} % University name in capitals
-    \bigskip
-    {\huge{\textit{Abstract}} \par}
-    \bigskip
-    {\normalsize \facname \par} % Faculty name
-    {\normalsize \deptname \par} % Department name
-    \bigskip
-    {\normalsize \degreename\par} % Degree name
-    \bigskip
-    {\normalsize\bf \@title \par} % Thesis title
-    \medskip
-    {\normalsize by \authornames \par} % Author name
-    \bigskip
-  \end{center}
+	\btypeout{Abstract Page}
+	\thispagestyle{empty}
+	\null\vfil
+	\begin{center}
+		\setlength{\parskip}{0pt}
+		{\normalsize \UNIVNAME \par} % University name in capitals
+		\bigskip
+		{\huge{\textit{Abstract}} \par}
+		\bigskip
+		{\normalsize \facname \par} % Faculty name
+		{\normalsize \deptname \par} % Department name
+		\bigskip
+		{\normalsize \degreename\par} % Degree name
+		\bigskip
+		{\normalsize\bf \@title \par} % Thesis title
+		\medskip
+		{\normalsize by \authornames \par} % Author name
+		\bigskip
+	\end{center}
 }
 %----------------------------------------------------------------------------------------
 {
-  \vfil\vfil\vfil\null
-  \cleardoublepage
+	\vfil\vfil\vfil\null
+	\cleardoublepage
 }
 \addtocounter{secnumdepth}{1}
 \setcounter{tocdepth}{6}
 \newcounter{dummy}
 \newcommand\addtotoc[1]{
-\refstepcounter{dummy}
-\addcontentsline{toc}{chapter}{#1}}
+	\refstepcounter{dummy}
+	\addcontentsline{toc}{chapter}{#1}}
 \renewcommand\tableofcontents{
-\btypeout{Table of Contents}
-\addtotoc{Contents}
-\begin{spacing}{1}{
-    \setlength{\parskip}{1pt}
-    \if@twocolumn
-      \@restonecoltrue\onecolumn
-    \else
-      \@restonecolfalse
-    \fi
-    \chapter*{\contentsname
-        \@mkboth{
-           \MakeUppercase\contentsname}{\MakeUppercase\contentsname}}
-    \@starttoc{toc}
-    \if@restonecol\twocolumn\fi
-   \cleardoublepage
-}\end{spacing}
+	\btypeout{Table of Contents}
+	\addtotoc{Contents}
+	\begin{spacing}{1}{
+			\setlength{\parskip}{1pt}
+			\if@twocolumn
+			\@restonecoltrue\onecolumn
+			\else
+			\@restonecolfalse
+			\fi
+			\chapter*{\contentsname
+				\@mkboth{
+					\MakeUppercase\contentsname}{\MakeUppercase\contentsname}}
+			\@starttoc{toc}
+			\if@restonecol\twocolumn\fi
+			\cleardoublepage
+	}\end{spacing}
 }
 \renewcommand\listoffigures{
-\btypeout{List of Figures}
-\addtotoc{List of Figures}
-\begin{spacing}{1}{
-    \setlength{\parskip}{1pt}
-    \if@twocolumn
-      \@restonecoltrue\onecolumn
-    \else
-      \@restonecolfalse
-    \fi
-    \chapter*{\listfigurename
-      \@mkboth{\MakeUppercase\listfigurename}
-              {\MakeUppercase\listfigurename}}
-    \@starttoc{lof}
-    \if@restonecol\twocolumn\fi
-    \cleardoublepage
-}\end{spacing}
+	\btypeout{List of Figures}
+	\addtotoc{List of Figures}
+	\begin{spacing}{1}{
+			\setlength{\parskip}{1pt}
+			\if@twocolumn
+			\@restonecoltrue\onecolumn
+			\else
+			\@restonecolfalse
+			\fi
+			\chapter*{\listfigurename
+				\@mkboth{\MakeUppercase\listfigurename}
+				{\MakeUppercase\listfigurename}}
+			\@starttoc{lof}
+			\if@restonecol\twocolumn\fi
+			\cleardoublepage
+	}\end{spacing}
 }
 \renewcommand\listoftables{
-\btypeout{List of Tables}
-\addtotoc{List of Tables}
-\begin{spacing}{1}{
-    \setlength{\parskip}{1pt}
-    \if@twocolumn
-      \@restonecoltrue\onecolumn
-    \else
-      \@restonecolfalse
-    \fi
-    \chapter*{\listtablename
-      \@mkboth{
-          \MakeUppercase\listtablename}{\MakeUppercase\listtablename}}
-    \@starttoc{lot}
-    \if@restonecol\twocolumn\fi
-    \cleardoublepage
-}\end{spacing}
+	\btypeout{List of Tables}
+	\addtotoc{List of Tables}
+	\begin{spacing}{1}{
+			\setlength{\parskip}{1pt}
+			\if@twocolumn
+			\@restonecoltrue\onecolumn
+			\else
+			\@restonecolfalse
+			\fi
+			\chapter*{\listtablename
+				\@mkboth{
+					\MakeUppercase\listtablename}{\MakeUppercase\listtablename}}
+			\@starttoc{lot}
+			\if@restonecol\twocolumn\fi
+			\cleardoublepage
+	}\end{spacing}
 }
 \newcommand\listsymbolname{Abbreviations}
 \usepackage{longtable}
 \newcommand\listofsymbols[2]{
-\btypeout{\listsymbolname}
-\addtotoc{\listsymbolname}
-    \chapter*{\listsymbolname
-      \@mkboth{
-          \MakeUppercase\listsymbolname}{\MakeUppercase\listsymbolname}}
-\begin{longtable}[c]{#1}#2\end{longtable}\par
-    \cleardoublepage
+	\btypeout{\listsymbolname}
+	\addtotoc{\listsymbolname}
+	\chapter*{\listsymbolname
+		\@mkboth{
+			\MakeUppercase\listsymbolname}{\MakeUppercase\listsymbolname}}
+	\begin{longtable}[c]{#1}#2\end{longtable}\par
+	\cleardoublepage
 }
 \newcommand\listconstants{Physical Constants}
 \usepackage{longtable}
 \newcommand\listofconstants[2]{
-\btypeout{\listconstants}
-\addtotoc{\listconstants}
-    \chapter*{\listconstants
-      \@mkboth{
-          \MakeUppercase\listconstants}{\MakeUppercase\listconstants}}
-\begin{longtable}[c]{#1}#2\end{longtable}\par
-    \cleardoublepage
+	\btypeout{\listconstants}
+	\addtotoc{\listconstants}
+	\chapter*{\listconstants
+		\@mkboth{
+			\MakeUppercase\listconstants}{\MakeUppercase\listconstants}}
+	\begin{longtable}[c]{#1}#2\end{longtable}\par
+	\cleardoublepage
 }
 \newcommand\listnomenclature{Symbols}
 \usepackage{longtable}
 \newcommand\listofnomenclature[2]{
-\btypeout{\listnomenclature}
-\addtotoc{\listnomenclature}
-    \chapter*{\listnomenclature
-      \@mkboth{
-          \MakeUppercase\listnomenclature}{\MakeUppercase\listnomenclature}}
-\begin{longtable}[c]{#1}#2\end{longtable}\par
-    \cleardoublepage
+	\btypeout{\listnomenclature}
+	\addtotoc{\listnomenclature}
+	\chapter*{\listnomenclature
+		\@mkboth{
+			\MakeUppercase\listnomenclature}{\MakeUppercase\listnomenclature}}
+	\begin{longtable}[c]{#1}#2\end{longtable}\par
+	\cleardoublepage
 }
 \newcommand\acknowledgements[1]{
-\btypeout{Acknowledgements}
-\addtotoc{Acknowledgements}
-\thispagestyle{plain}
-\begin{center}{\huge{\textit{Acknowledgements}} \par}\end{center}
-{\normalsize #1}
-\vfil\vfil\null
-
+	\btypeout{Acknowledgements}
+	\addtotoc{Acknowledgements}
+	\thispagestyle{plain}
+	\begin{center}{\huge{\textit{Acknowledgements}} \par}\end{center}
+	{\normalsize #1}
+	\vfil\vfil\null
+	
 }
 \newcommand\dedicatory[1]{
-\btypeout{Dedicatory}
-\thispagestyle{plain}
-\null\vfil
-\vskip 60\p@
-\begin{center}{\Large \sl #1}\end{center}
-\vfil\null
-\cleardoublepage
+	\btypeout{Dedicatory}
+	\thispagestyle{plain}
+	\null\vfil
+	\vskip 60\p@
+	\begin{center}{\Large \sl #1}\end{center}
+	\vfil\null
+	\cleardoublepage
 }
 \renewcommand\backmatter{
-  \if@openright
-    \cleardoublepage
-  \else
-    \clearpage
-  \fi
-  \addtotoc{\bibname}
-  \btypeout{\bibname}
-  \@mainmatterfalse}
+	\if@openright
+	\cleardoublepage
+	\else
+	\clearpage
+	\fi
+	\addtotoc{\bibname}
+	\btypeout{\bibname}
+	\@mainmatterfalse}
 \endinput
