add Abstract in Bahasa Indonesia

--- a/Full-N-studentID-surname-firstname.tex
+++ b/Full-N-studentID-surname-firstname.tex
@@ -142,6 +142,18 @@
 Citation \cite[]{miyoshi_direction_2000}
 \it{keyword: }
 }
+\clearpage
+%----------------------------------------------------------------------------------------
+%	ABSTRACT Indonesia
+%----------------------------------------------------------------------------------------
+
+\addtotoc{Abstrak} % Add the "Abstract" page entry to the Contents
+
+\abstractIndonesia{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
+Ini abstrak dalam bahasa Indonesia
+Sitasi \cite[]{miyoshi_direction_2000}
+\it{kata kunci: }
+}
 
 \clearpage % Start a new page
 
