--- a/Thesis.cls
+++ b/Thesis.cls
@@ -337,6 +337,29 @@ pdfstartview={FitV},unicode,breaklinks=true]{hyperref}
 		\bigskip
 	\end{center}
 }
+
+\newenvironment{abstractIndonesia}
+{
+	\btypeout{Halaman Abstrak}
+	\thispagestyle{empty}
+	\null\vfil
+	\begin{center}
+		\setlength{\parskip}{0pt}
+		{\normalsize \UNIVNAME \par} % University name in capitals
+		\bigskip
+		{\huge{\textit{Abstrak}} \par}
+		\bigskip
+		{\normalsize \facname \par} % Faculty name
+		{\normalsize \deptname \par} % Department name
+		\bigskip
+		{\normalsize \degreename\par} % Degree name
+		\bigskip
+		{\normalsize\bf \@title \par} % Thesis title
+		\medskip
+		{\normalsize by \authornames \par} % Author name
+		\bigskip
+	\end{center}
+}
 %----------------------------------------------------------------------------------------
 {
 	\vfil\vfil\vfil\null
